--- a/deploy.yaml
+++ b/deploy.yaml
@@ -10,15 +10,15 @@ apps:
 
       COMMON_VARIABLE: true
 
-    env_production:
+    env_dev:
 
-      NODE_ENV: production
+      NODE_ENV: dev
 
 
 
 deploy:                     # 部署脚本
 
-  production:               # 生产环境
+  dev:               # 生产环境
 
     user: root            # 服务器的用户名
 
@@ -36,8 +36,8 @@ deploy:                     # 部署脚本
 
     pre-deploy: git fetch --all # 部署前执行
 
-    post-deploy: npm i --legacy-peer-deps &&  pm2 reload deploy.yaml --env production # 部署后执行
+    post-deploy: npm i --legacy-peer-deps &&  pm2 reload deploy.yaml --env dev # 部署后执行
 
     env:
 
-      NODE_ENV: production
+      NODE_ENV: dev
